crates/sui-prover/tests/snapshots/table_ext/borrow_or_unknown.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/table_ext/borrow_or_unknown.fail.move:17:5
   │
17 │     ensures(*borrow_or_unknown(t, k) == 0);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/table_ext/borrow_or_unknown.fail.move:15: test_absent_not_specific
